[project]
name = "emotion-mcp-server"
version = "0.1.0"
description = "MCP server for processing the dair-ai/emotion dataset"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0",
    "datasets>=2.14.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
emotion-mcp = "server:main"
